# ai_robot_practice

./: .gitignore  README.md  zlh_note.md
ai_robot_nav_demo/: CMakeLists.txt
ai_robot_nav_demo/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
ai_robot_nav_demo/launch/: amcl.launch  brain_explore_independent.launch  brain_navigation.launch  brainnav _lifelongslam.launch  brainnav.launch  explore.launch  explore_costmap.launch  explore_lite_test.launch  move_base.launch  move_base_rrt.launch  moveslam.launch  nav_slam.launch  path.launch  rrt_exploration_test.launch  rrt_slam.launch  rviz.launch  save_map_explore_lite.launch  save_map_rrt.launch  simple.launch  slam_gmapping.launch  slam_gmapping_rrt.launch  testloca.launch
ai_robot_nav_demo/map/: nav.pgm  nav.yaml  rrt.pgm  rrt.yaml
ai_robot_nav_demo/param/: base_local_planner_params.yaml  teb_local_planner_params.yaml
ai_robot_nav_demo/rviz/: default.rviz  default2.rviz
navigation/move_base/: CMakeLists.txt
navigation/move_base/include/move_base/: AIBrain.h  move_base.h  posControl.h  postrajectory.h
navigation/move_base/include/obsavoid/: obs_avoid.h
navigation/move_base/src/: AIBrain.cpp  move_base.cpp
navigation/move_base/src/obsavoid/: obs_avoid.cpp
navigation/nav_core/: CMakeLists.txt
navigation/teb_local_planner/src/: teb_local_planner_ros.cpp
ranger_mini_gazebo/launch/: ai_robot_ranger_gazebo.launch
ranger_mini_gazebo/xacro/: pioneer3at.urdf
